<resources>
    <string name="app_name">SportShopApplication</string>
    <string name="product_count"> %d عدد </string>
    <string name="refresh_string">refresh</string>
    <string name="adding_to_shopping_bag">افزودن به سبد خرید</string>
    <string name="product_introduction_text">معرفی اجمالی محصول</string>
    <string name="technical_information_text">مشخصات فنی</string>
    <string name="server_error_message">متاسفانه مشکلی در سرور های ما به وجود آمد. لطفا کمی بعد مراجعه کنید</string>
    <string name="internet_connection_error_message">خطای اتصال : لطفا اتصال خود به اینترنت را بررسی کنید</string>
    <string name="client_tab_text">پروفایل من</string>
    <string name="register_text">عضویت</string>
    <string name="confirm_password_text">تایید رمز عبور</string>
    <string name="confirm">بله</string>
    <string name="cancel">منصرف شدم</string>
    <string name="password_text">رمز عبور</string>
    <string name="phone_number_text">شماره تلفن</string>
    <string name="email_text">ایمیل</string>
    <string name="name_and_last_name_text">نام و نام خوانوادگی</string>
    <string name="wrong_email_or_password">ایمیل یا رمز عیور اشتباه است</string>
    <string name="internet_connection_error_text"> در اتصال به اینترنت مشکلی پیش آمد </string>
    <string name="successfull_login_text">با موفقیت وارد شدید</string>
    <string name="logout">خروج</string>
    <string name="information">اطلاعات حساب کاربری</string>
    <string name="address_text">آدرس های من</string>
    <string name="edit_information">ویرایش اطلاعات کاربری</string>
    <string name="empty_basket_text">سبد شما خالی است</string>
    <string name="final_sale">نهایی کردن خرید</string>
    <string name="successful_register_text">با موفقیت عضو شدید</string>
    <string name="logouting_text">در حال خروج</string>
    <string name="login_wait_text">در حال ورود</string>
    <string name="login_and_register_waiting_text">در حال عضویت و ورود</string>
    <string name="login_text">ورود</string>
    <string name="logout_warning">آیا می خواهید از حساب کاربری خود خارج شوید؟</string>
    <string name="category">دسته بندی ها</string>
    <string name="special_sale">فروش ویژه</string>
    <string name="shopping_basket">سبد خرید شما</string>
    <string name="frame_layout">frame_layout</string>
    <string name="demo_reason">این بخش به خاطر کم بودن فرصت ، پیاده سازی نشده و صرفا جنبه پرکردن
        صفحه را دارد :)
        </string>
</resources>