<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    android:clickable="true"
    android:focusable="true">

    <com.airbnb.lottie.LottieAnimationView
        style="@style/lottie_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingBottom="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/register_edit_text_style"
                    android:hint="@string/name_and_last_name_text"
                    app:startIconDrawable="@drawable/person_ic">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        style="@style/text_input_edit_text_style" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/register_edit_text_style"
                    android:hint="@string/email_text"
                    app:startIconDrawable="@drawable/email_ic">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        style="@style/text_input_edit_text_style"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/register_edit_text_style"
                    android:hint="@string/phone_number_text"
                    app:startIconDrawable="@drawable/phone_ic">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_no"
                        style="@style/text_input_edit_text_style" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/register_edit_text_style"
                    android:hint="@string/password_text"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock_open_ic">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/text_input_edit_text_style"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/register_edit_text_style"
                    android:hint="@string/confirm_password_text"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock_ic">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repeat_password"
                        style="@style/text_input_edit_text_style"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/primaryLightColor"
                android:gravity="center"
                android:text="@string/register_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                app:cornerRadius="16dp" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/login_waiting_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_black"
        android:clickable="true"
        android:elevation="15dp"
        android:focusable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:text="@string/login_and_register_waiting_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/secondaryLightColor" />

            <com.github.ybq.android.spinkit.SpinKitView
                style="@style/SpinKitView.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/white" />

        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>